--- a/test.html
+++ b/test.html
@@ -34,7 +34,7 @@
         }
     </style> -->
 
-    <div class="auth-layout-wrap">
+    <div class="">
         <div class="">
             <div class="card">
                 <div class="row ">
