--- a/test.html
+++ b/test.html
@@ -79,7 +79,7 @@
                                     <!-- Phone Number Field -->
                                     <div class="col-md-6 col-sm-12 mb-3">
                                         <label for="phone">Age</label>
-                                        <input type="number" name="ageInput" id="ageInput" class="form-control" data-parsley-pattern="/^[9][6-9]\d{8}$/i" data-parsley-error-message="You must enter a valid phone number." data-parsley-required-message="This field is required." data-parsley-required="true" maxlength="10">
+                                        <input type="number" name="ageInput" id="ageInput" class="form-control"  data-parsley-required-message="This field is required." data-parsley-required="true" maxlength="10">
                                     </div>
 
                                     <!-- MantraType -->
