form ui and dat in js completed

--- a/index.html
+++ b/index.html
@@ -811,6 +811,8 @@
         const url = "https://script.google.com/macros/s/AKfycbxky1Zkg3b64-tzSMY_GwPQlNfrFcleEuhx0BlFix0xEGkJKXOO9rqiAm-U13UGbl4Wnw/exec";
         const data =  logObject;
 
+        console.log(data);
+
         $.ajax({
           url: url,
           type: "POST",
