--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ button {
                                                         districtSelect.innerHTML = `<option value="">Select a district</option>` + districtOptionHTML;
                                             
                                                         // Clear the municipality dropdown
-                                                        document.getElementById("permanentAddressMunicipalityInput").innerHTML = `<option value="">Select a permanent municipality</option>`;
+                                                        document.getElementById("permanentAddressMunicipalityInput").innerHTML = `<option value="">Select a  municipality</option>`;
                                                     });
                                             
                                                     // Initial trigger to populate districts if default state is set
