--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ button {
                                                         "gandaki":["बागलुङ", "गोरखा", "कास्की", "लमजुङ", "मनाङ", "मुस्ताङ", "म्याग्दी", "नवलपुर", "पर्वत", "स्याङग्जा", "तनहुँ"],
                                                         "lumbini":["अर्घाखाँची", "बाँके", "बर्दिया", "दाङ", "गुल्मी", "कपिलवस्तु", "परासी", "पाल्पा", "प्युठान", "रोल्पा", "पूर्वी रूकुम", "रुपन्देही"],
                                                         "karnali":["दैलेख", "डोल्पा", "हुम्ला", "जाजरकोट", "जुम्ला", "कालिकोट", "मुगु", "रुकुम पश्चिम", "सल्यान", "सुर्खेत"],
-                                                        "sudurpaschim":["अछाम", "बैतडी", "बझाङ", "बाजुरा", "डोटी", "कैलाली", "कञ्चनपुर"]
+                                                        "sudurpaschim":["अछाम", "बैतडी", "बझाङ", "बाजुरा", "डोटी", "कैलाली", "कञ्चनपुर","डडेलधुरा"]
                                                     };
                                             
                                                     // Populate initial district options if state is selected
@@ -554,7 +554,7 @@ button {
                                                         "gandaki":["बागलुङ", "गोरखा", "कास्की", "लमजुङ", "मनाङ", "मुस्ताङ", "म्याग्दी", "नवलपुर", "पर्वत", "स्याङग्जा", "तनहुँ"],
                                                         "lumbini":["अर्घाखाँची", "बाँके", "बर्दिया", "दाङ", "गुल्मी", "कपिलवस्तु", "परासी", "पाल्पा", "प्युठान", "रोल्पा", "पूर्वी रूकुम", "रुपन्देही"],
                                                         "karnali":["दैलेख", "डोल्पा", "हुम्ला", "जाजरकोट", "जुम्ला", "कालिकोट", "मुगु", "रुकुम पश्चिम", "सल्यान", "सुर्खेत"],
-                                                        "sudurpaschim":["अछाम", "बैतडी", "बझाङ", "बाजुरा", "डोटी", "कैलाली", "कञ्चनपुर"]
+                                                        "sudurpaschim":["अछाम", "बैतडी", "बझाङ", "बाजुरा", "डोटी", "कैलाली", "कञ्चनपुर","डडेलधुरा"]
                                                     };
                                             
                                                     // Populate initial district options if state is selected
