--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@ button {
                                                         
                                                         "koshi":["भोजपुर", "धनकुटा", "इलाम", "झापा", "खोटाँग", "मोरंग", "ओखलढुंगा", "पांचथर", "संखुवासभा", "सोलुखुम्बू", "सुनसरी", "ताप्लेजुंग", "तेह्रथुम", "उदयपुर"],
                                                         "madhesh":["बारा", "धनुषा", "महोत्तरी", "पर्सा", "रौतहट", "सप्तरी", "सर्लाही", "सिराहा"],
-                                                        "bagmati":["काठमाडौँ", "ललितपुर", "भक्तपुर", "मकवानपुर", "चितवन", "काभ्रेपलान्चोक", "सिन्धुपाल्चोक", "दोलखा", "रामेछाप", "रसुवा", "नुवाकोट"],
+                                                        "bagmati":["काठमाडौँ", "ललितपुर", "भक्तपुर", "मकवानपुर", "चितवन", "काभ्रेपलान्चोक", "सिन्धुपाल्चोक", "दोलखा", "रामेछाप", "रसुवा", "नुवाकोट","धादिंङ्ग"],
                                                         "gandaki":["बागलुङ", "गोरखा", "कास्की", "लमजुङ", "मनाङ", "मुस्ताङ", "म्याग्दी", "नवलपुर", "पर्वत", "स्याङग्जा", "तनहुँ"],
                                                         "lumbini":["अर्घाखाँची", "बाँके", "बर्दिया", "दाङ", "गुल्मी", "कपिलवस्तु", "परासी", "पाल्पा", "प्युठान", "रोल्पा", "पूर्वी रूकुम", "रुपन्देही"],
                                                         "karnali":["दैलेख", "डोल्पा", "हुम्ला", "जाजरकोट", "जुम्ला", "कालिकोट", "मुगु", "रुकुम पश्चिम", "सल्यान", "सुर्खेत"],
