dob and mntra takend date field changed

--- a/index.html
+++ b/index.html
@@ -205,14 +205,14 @@ button {
 
                                     <!-- Mantra Taken Date Field -->
                                     <div class="col-md-6 col-sm-12 mb-3">
-                                        <label for="mantraTakenDate">First Mantra Taken Date</label>
-                                        <input type="date" name="mantraTakenDate" id="mantraTakenDate" class="form-control" data-parsley-required-message="This field is required." data-parsley-required="true">
+                                        <label for="mantraTakenDate">All Mantra Taken Date (yyyy-mm-dd)</label>
+                                        <input type="text" name="mantraTakenDate" id="mantraTakenDate" class="form-control" data-parsley-required-message="This field is required." data-parsley-required="true">
                                     </div>
 
                                     <!-- Date of Birth  -->
                                     <div class="col-md-6 col-sm-12 mb-3">
-                                        <label for="dob">Date of Birth</label>
-                                        <input type="date" name="dob" id="dob" class="form-control"  data-parsley-required-message="This field is required." data-parsley-required="true" maxlength="10">
+                                        <label for="dob">Date of Birth (yyyy-mm-dd)</label>
+                                        <input type="text" name="dob" id="dob" class="form-control"  data-parsley-required-message="This field is required." data-parsley-required="true" maxlength="10">
                                     </div>
 
                                     <!-- Gender Radio Button -->
